--- a/.github/workflows/owasp-zap.yml
+++ b/.github/workflows/owasp-zap.yml
@@ -2,6 +2,8 @@ name: OWASP ZAP Scan
 
 on:
   workflow_dispatch:
+  push:
+    branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
 
