--- a/.github/workflows/owasp-zap.yml
+++ b/.github/workflows/owasp-zap.yml
@@ -15,6 +15,7 @@ jobs:
       contents: read
       security-events: write
       actions: read
+      issues: write
 
     env:
       APP_ENV: testing
