--- a/.github/workflows/owasp-zap.yml
+++ b/.github/workflows/owasp-zap.yml
@@ -61,4 +61,4 @@ jobs:
         with:
           target: 'http://127.0.0.1:8000'
           fail_action: false
-          artifact_name: 'zap-scan-results'
+          cmd_options: '-a'
